--- a/noughts-and-crosses/src/index.css
+++ b/noughts-and-crosses/src/index.css
@@ -1,9 +1,24 @@
+@import url("https://fonts.googleapis.com/css2?family=Glory:wght@400;700&display=swap");
+
 body {
-  font: 14px "Century Gothic", Futura, sans-serif;
+  background: #345b63;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font: 14px "Glory", Calibri, sans-serif;
   margin: 20px;
+  min-height: 100vh;
 }
 
-ol, ul {
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+ol,
+ul {
   padding-left: 30px;
 }
 
@@ -14,22 +29,35 @@ ol, ul {
 }
 
 .status {
+  color: #d4ecdd;
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 0.05rem;
   margin-bottom: 10px;
 }
 
 .square {
-  background: #fff;
-  border: 1px solid #999;
+  background: #d4ecdd;
+  border: 2px solid #345b63;
+  border-radius: 0.4rem;
+  color: #345b63;
   float: left;
-  font-size: 24px;
+  font-size: 50px;
   font-weight: bold;
-  line-height: 34px;
-  height: 34px;
+  line-height: 70px;
+  height: 70px;
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
   text-align: center;
-  width: 34px;
+  width: 70px;
+}
+
+.square:hover {
+  background-color: #152d35;
+  color: #d4ecdd;
+  cursor: pointer;
+  transition: all 1s;
 }
 
 .square:focus {
@@ -46,5 +74,63 @@ ol, ul {
 }
 
 .game-info {
-  margin-left: 20px;
+  color: #d4ecdd;
+  font-size: 16px;
+  letter-spacing: 0.1rem;
+  margin-left: 1rem;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.game-info ol {
+  align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  padding-top: 1rem;
+}
+
+.game-info ol li {
+  margin-bottom: 0.6rem;
+}
+
+.game-info ol button {
+  background-color: #152d35;
+  border: 0;
+  border-radius: 0.2rem;
+  color: #d4ecdd;
+  cursor: pointer;
+  font-family: Glory, Calibri, sans-serif;
+  font-size: 1rem;
+  outline: 0;
+  padding: 0.4rem 1rem;
+}
+.game-info ol button:hover {
+  background-color: #d4ecdd;
+  color: #152d35;
+}
+
+@media (min-width: 600px) {
+  body {
+    padding-left: 1rem;
+  }
+  .square {
+    border-width: 0.4rem;
+    font-size: 120px;
+    height: 140px;
+    line-height: 140px;
+    width: 140px;
+  }
+}
+@media (min-width: 900px) {
+  .square {
+    font-size: 200px;
+    height: 250px;
+    line-height: 250px;
+    width: 250px;
+  }
+  .game-info ol button {
+    font-size: 1.25rem;
+    margin-left: 1.2rem;
+    padding: 1.2rem;
+  }
 }
